--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EMPLOYEEID=2601061197
-PASSWORD=PotatoWorld99@
+EMPLOYEEID=<YOUR_EMPLOYEE_ID_HERE>
+PASSWORD=<YOUR_ADRENANLIN_PASSWORD_HERE>
 COMPANY=VEHERE
